--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,3 +29,22 @@ jobs:
 
     - name: Push the Docker image
       run: docker push barclaysacr02.azurecr.io/harshitcloud01:v1
+      
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_push_image # Will wait for the execution of the previous job
+    steps:
+    - uses: actions/checkout@v2
+
+
+    - name: Kubernetes set context
+      uses: Azure/k8s-set-context@v1
+      with:
+        kubeconfig: ${{secrets.KUBECONFIG}}  
+      id: login
+
+    - name: Apply AKS Deployment
+      run: kubectl apply -f deployment.yaml
+
+    - name: Apply AKS Deployment
+      run: kubectl apply -f service.yaml
